fix: list-wrapper align

--- a/src/components/FilterList.scss
+++ b/src/components/FilterList.scss
@@ -66,6 +66,7 @@ $translate-arrow: transform 0.3s ease-in;
   // Пока в основных стилях не прописано тут добавила
   box-sizing: border-box;
   z-index: 2;
+  margin-right: 6px;
 }
 
 .drop-down-filter__list {
